--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "prefect>=2.14,<3.0",
     "pydantic>=2.5,<3.0",
     "python-dotenv>=1.0,<2.0",
+    "psycopg2-binary>=2.9,<3.0",
+    "sqlalchemy>=2.0,<3.0",
+    "pandas>=2.0,<3.0",
 ]
 
 [project.scripts]
