--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Prefect-based ETL scaffolding for ride booking analytics."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "python-dotenv>=1.1.1",
     "prefect>=2.14,<3.0",
     "pydantic>=2.5,<3.0",
     "python-dotenv>=1.0,<2.0",
