feat: add medallion architecture

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,41 @@
-# Copy this file to .env and adjust values for your local environment.
+# ============================================================================
+# Ride Booking ETL - Environment Configuration
+# ============================================================================
+# Copy this file to .env and update with your actual values
+# cp .env.example .env
+
+# ============================================================================
+# Project Paths
+# ============================================================================
 PROJECT_BASE_PATH=.
 PROJECT_DATA_DIR=data
+
+# ============================================================================
+# Database Configuration
+# ============================================================================
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=ride_booking
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_SCHEMA=public
+
+# ============================================================================
+# Prefect Configuration
+# ============================================================================
 PREFECT_PROFILE=ride-booking-local
-# PREFECT_API_URL=
+# PREFECT_API_URL=http://localhost:4200/api
 # PREFECT_STORAGE_BLOCK=
 # PREFECT_WORK_POOL=
+
+# ============================================================================
+# pgAdmin Configuration (for dev profile)
+# ============================================================================
+PGADMIN_EMAIL=admin@ridebooking.com
+PGADMIN_PASSWORD=admin
+PGADMIN_PORT=5050
+
+# ============================================================================
+# Prefect Server Configuration (optional)
+# ============================================================================
+PREFECT_PORT=4200
