--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
         condition: service_healthy
     networks:
       - ride_booking_network
-    command: ["python", "-c", "import time; print('ETL app ready'); time.sleep(infinity)"]
+    command: ["python", "-c", "import time; print('ETL app ready'); time.sleep(float('inf'))"]
 
   # Prefect Server (optional - for local orchestration)
   prefect_server:
