feat: add db-wipe and db-wipe-dry commands to Makefile and implement wipe_database utility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 [project.scripts]
 ride-booking-bootstrap = "app.etl.bootstrap:run_bootstrap"
 ride-booking-etl = "app.etl.cli:main"
+ride-booking-wipe-db = "app.tools.wipe_database:main"
 
 [project.optional-dependencies]
 dev = [
