feat: add apache iceberg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,14 @@ dependencies = [
     "prefect>=2.14,<3.0",
     "pydantic>=2.5,<3.0",
     "python-dotenv>=1.0,<2.0",
-    "psycopg2-binary>=2.9,<3.0",
-    "sqlalchemy>=2.0,<3.0",
+    "pyiceberg>=0.6.0",
+    "pyarrow>=14.0.0",
     "pandas>=2.0,<3.0",
 ]
 
 [project.scripts]
 ride-booking-bootstrap = "app.etl.bootstrap:run_bootstrap"
 ride-booking-etl = "app.etl.cli:main"
-ride-booking-wipe-db = "app.tools.wipe_database:main"
 
 [project.optional-dependencies]
 dev = [
