--- a/.env.example
+++ b/.env.example
@@ -11,14 +11,9 @@ PROJECT_BASE_PATH=.
 PROJECT_DATA_DIR=data
 
 # ============================================================================
-# Database Configuration
+# Iceberg Configuration
 # ============================================================================
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=ride_booking
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_SCHEMA=public
+ICEBERG_WAREHOUSE=warehouse
 
 # ============================================================================
 # Prefect Configuration
@@ -28,14 +23,3 @@ PREFECT_PROFILE=ride-booking-local
 # PREFECT_STORAGE_BLOCK=
 # PREFECT_WORK_POOL=
 
-# ============================================================================
-# pgAdmin Configuration (for dev profile)
-# ============================================================================
-PGADMIN_EMAIL=admin@ridebooking.com
-PGADMIN_PASSWORD=admin
-PGADMIN_PORT=5050
-
-# ============================================================================
-# Prefect Server Configuration (optional)
-# ============================================================================
-PREFECT_PORT=4200
