--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "pyiceberg>=0.6.0",
     "pyarrow>=14.0.0",
     "pandas>=2.0,<3.0",
+    "streamlit>=1.28.0",
+    "plotly>=5.17.0",
 ]
 
 [project.scripts]
