--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pandas>=2.0,<3.0",
     "streamlit>=1.28.0",
     "plotly>=5.17.0",
+    "duckdb>=0.9.0",
 ]
 
 [project.scripts]
